// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckbox renders 1`] = `
<div
  class="euiCheckbox testClass1 testClass2 emotion-euiCheckbox-euiTestCss"
>
  <div
    class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
  >
    <span
      class="emotion-euiCheckbox__icon-check"
      data-euiicon-type="empty"
    />
    <input
      aria-label="aria-label"
      class="euiCheckbox__input emotion-euiCheckbox__input"
      data-test-subj="test subject string"
      id="id"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`EuiCheckbox renders props: checked 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <div
    class="euiCheckbox__square emotion-euiCheckbox__square-selected"
  >
    <span
      class="emotion-euiCheckbox__icon-check"
      data-euiicon-type="check"
    />
    <input
      checked=""
      class="euiCheckbox__input emotion-euiCheckbox__input"
      id="id"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`EuiCheckbox renders props: disabled 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <div
    class="euiCheckbox__square emotion-euiCheckbox__square-disabled-unselected"
  >
    <span
      class="emotion-euiCheckbox__icon-check"
      data-euiicon-type="empty"
    />
    <input
      class="euiCheckbox__input emotion-euiCheckbox__input"
      disabled=""
      id="id"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`EuiCheckbox renders props: label 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <div
    class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
  >
    <span
      class="emotion-euiCheckbox__icon-check"
      data-euiicon-type="empty"
    />
    <input
      class="euiCheckbox__input emotion-euiCheckbox__input"
      id="id"
      type="checkbox"
    />
  </div>
  <label
    class="euiCheckbox__label emotion-euiCheckbox__label"
    for="id"
  >
    <span>
      Label
    </span>
  </label>
</div>
`;

exports[`EuiCheckbox renders props: labelProps 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <div
    class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
  >
    <span
      class="emotion-euiCheckbox__icon-check"
      data-euiicon-type="empty"
    />
    <input
      class="euiCheckbox__input emotion-euiCheckbox__input"
      id="id"
      type="checkbox"
    />
  </div>
  <label
    aria-label="aria-label"
    class="euiCheckbox__label testClass1 testClass2 emotion-euiCheckbox__label-euiTestCss"
    data-test-subj="test subject string"
    for="id"
  >
    Label
  </label>
</div>
`;

exports[`EuiCheckbox renders props: readOnly 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <div
    class="euiCheckbox__square emotion-euiCheckbox__square-unselected-readOnly"
  >
    <span
      class="emotion-euiCheckbox__icon-check"
      data-euiicon-type="empty"
    />
    <input
      class="euiCheckbox__input emotion-euiCheckbox__input"
      id="id"
      readonly=""
      type="checkbox"
    />
  </div>
  <label
    class="euiCheckbox__label emotion-euiCheckbox__label-readOnly"
    for="id"
  >
    Label
  </label>
</div>
`;
